syntax = "proto3";
package opencode;

// ============================================
// IMPORTS: All OpenCode canonical models
// ============================================

import "oc_auth.proto";
import "oc_model.proto";
import "oc_provider.proto";
import "oc_session.proto";
import "oc_agent.proto";
import "oc_tool.proto";
import "oc_message.proto";
import "oc_message_part.proto";
import "oc_message_error.proto";
import "oc_event.proto";

// ============================================
// IPC ENVELOPES (Blazor â†” client-core)
// ============================================

// Client â†’ Server envelope (wraps all requests)
message IpcClientMessage {
  uint64 request_id = 1;  // Correlates request with response

  oneof payload {
    // Auth (10-14)
    IpcAuthHandshake auth_handshake = 10;

    // Server Management (15-18)
    IpcDiscoverServerRequest discover_server = 15;
    IpcSpawnServerRequest spawn_server = 16;
    IpcCheckHealthRequest check_health = 17;
    IpcStopServerRequest stop_server = 18;

    // Sessions (20-29)
    IpcListSessionsRequest list_sessions = 20;
    IpcCreateSessionRequest create_session = 21;
    IpcDeleteSessionRequest delete_session = 22;

    // Agents (30-39)
    IpcListAgentsRequest list_agents = 30;

    // Providers (40-49)
    IpcGetProviderStatusRequest get_provider_status = 40;

    // Auth Operations (50-59)
    IpcSetAuthRequest set_auth = 50;
    IpcGetAuthRequest get_auth = 51;

    // Config Operations (60-69)
    IpcGetConfigRequest get_config = 60;
    IpcUpdateConfigRequest update_config = 61;

    // Auth Sync (62-63) - uses 60s range for config/auth operations
    IpcSyncAuthKeysRequest sync_auth_keys = 62;
    IpcGetOAuthStatusRequest get_oauth_status = 63;

    // Message Operations (70-79)
    IpcSendMessageRequest send_message = 70;
  }
}

// Server â†’ Client envelope (wraps all responses)
message IpcServerMessage {
  uint64 request_id = 1;  // Correlates with request

  oneof payload {
    // Auth (10-14)
    IpcAuthHandshakeResponse auth_handshake_response = 10;

    // Server Management (15-18)
    IpcDiscoverServerResponse discover_server_response = 15;
    IpcSpawnServerResponse spawn_server_response = 16;
    IpcCheckHealthResponse check_health_response = 17;
    IpcStopServerResponse stop_server_response = 18;

    // Sessions (20-29) - Uses OpenCode canonical types
    opencode.session.OcSessionList session_list = 20;
    opencode.session.OcSessionInfo session_info = 21;
    IpcDeleteSessionResponse delete_session_response = 22;

    // Agents (30-39) - Uses OpenCode canonical types
    opencode.agent.OcAgentList agent_list = 30;

    // Providers (40-49) - Uses OpenCode canonical types
    IpcProviderStatus provider_status = 40;

    // Auth Operations (50-59) - Uses OpenCode canonical types
    opencode.auth.OcAuth auth_info = 50;

    // Config Operations (60-69)  // ðŸ†• NEW
    IpcGetConfigResponse get_config_response = 60;
    IpcUpdateConfigResponse update_config_response = 61;

    // Auth Sync Status (62-63)
    IpcAuthSyncResponse auth_sync_response = 62;
    IpcOAuthStatusResponse oauth_status_response = 63;

    // Message Operations (70-79)
    opencode.message.OcMessage send_message_response = 70;

    // Errors (100+)
    IpcErrorResponse error = 100;
  }
}

// ============================================
// AUTH HANDSHAKE (First message must succeed)
// ============================================

message IpcAuthHandshake {
  string token = 1;  // Auth token from Blazor
}

message IpcAuthHandshakeResponse {
  bool success = 1;              // true if token valid
  optional string error = 2;     // Error message if failed
}

// ============================================
// SERVER MANAGEMENT (client-core specific)
// ============================================

// Server info (NOT from OpenCode JSON Schema - client-core specific)
// Used for: Blazor needs to know server connection details
message IpcServerInfo {
  uint32 pid = 1;           // Process ID (for shutdown)
  uint32 port = 2;          // Port number (for connection)
  string base_url = 3;      // API base URL (e.g., "http://localhost:3000")
  string name = 4;          // Display name (e.g., "OpenCode Server - Project X")
  string command = 5;       // Spawn command (for logging/debugging)
  bool owned = 6;           // true = we spawned it (kill on exit), false = discovered (leave running)
}

// Discover running OpenCode servers
message IpcDiscoverServerRequest {}

message IpcDiscoverServerResponse {
  optional IpcServerInfo server = 1;  // Server if found, null if not running
}

// Spawn new OpenCode server
message IpcSpawnServerRequest {
  optional uint32 port = 1;  // Preferred port (default: 3000)
}

message IpcSpawnServerResponse {
  IpcServerInfo server = 1;  // Spawned server info
}

// Check server health
message IpcCheckHealthRequest {}

message IpcCheckHealthResponse {
  bool healthy = 1;  // true if server responding, false otherwise
}

// Stop OpenCode server (only if owned)
message IpcStopServerRequest {}

message IpcStopServerResponse {
  bool success = 1;  // true if stopped, false if not owned or failed
}

// ============================================
// SESSION OPERATIONS
// ============================================

message IpcListSessionsRequest {}

message IpcCreateSessionRequest {
  optional string title = 1;  // Session title (default: generated)
}

message IpcDeleteSessionRequest {
  string session_id = 1;  // Session ID to delete
}

message IpcDeleteSessionResponse {
  bool success = 1;
}

// ============================================
// AGENT OPERATIONS
// ============================================

message IpcListAgentsRequest {}

// ============================================
// PROVIDER OPERATIONS
// ============================================

message IpcGetProviderStatusRequest {}

// Provider status (simplified - just connected provider IDs)
message IpcProviderStatus {
  repeated string connected = 1;  // List of connected provider IDs
}

// ============================================
// AUTH OPERATIONS
// ============================================

message IpcSetAuthRequest {
  string provider_id = 1;               // Provider to set auth for
  opencode.auth.OcAuth auth = 2;        // Auth credentials (OAuth, API key, or well-known)
}

message IpcGetAuthRequest {
  string provider_id = 1;  // Provider to get auth for
}

// ============================================
// ERROR RESPONSES
// ============================================

// Error codes for IPC operations
enum IpcErrorCode {
  IPC_ERROR_CODE_UNKNOWN = 0;          // Unknown error (should never use)
  IPC_ERROR_CODE_INVALID_MESSAGE = 1;  // Malformed protobuf or missing payload
  IPC_ERROR_CODE_NOT_IMPLEMENTED = 2;  // Operation not yet implemented
  IPC_ERROR_CODE_AUTH_ERROR = 3;       // Authentication problem
  IPC_ERROR_CODE_INTERNAL_ERROR = 4;   // Internal server error
  IPC_ERROR_CODE_NO_SERVER = 5;        // No OpenCode server connected
  IPC_ERROR_CODE_SERVER_ERROR = 6;     // OpenCode server operation failed
  IPC_ERROR_CODE_AUTH_SYNC_FAILED = 7;       // Auth sync operation failed
  IPC_ERROR_CODE_KEY_VALIDATION_FAILED = 8;  // API key validation failed
}

message IpcErrorResponse {
  IpcErrorCode code = 1;   // Error code enum
  string message = 2;      // Human-readable error message
}

// ============================================
// CONFIG OPERATIONS
// ============================================

message IpcGetConfigRequest {}

message IpcGetConfigResponse {
  string app_config_json = 1;     // JSON-serialized AppConfig
  string models_config_json = 2;  // JSON-serialized ModelsConfig
}

message IpcUpdateConfigRequest {
  string config_json = 1;  // Full AppConfig as JSON (replaces existing)
}

message IpcUpdateConfigResponse {
  bool success = 1;
  optional string error = 2;
}

// ============================================
// AUTH SYNC OPERATIONS
// ============================================

// Request to sync API keys from .env to OpenCode server
message IpcSyncAuthKeysRequest {
  // If true, skip providers with existing OAuth (default: true)
  bool skip_oauth_providers = 1;
  // Overall timeout in seconds (default: 30)
  uint32 timeout_secs = 2;
}

// Response with sync results per provider
message IpcAuthSyncResponse {
  // Successfully synced providers
  repeated IpcProviderSyncResult synced = 1;
  // Failed providers with error details
  repeated IpcProviderSyncResult failed = 2;
  // Skipped providers (OAuth detected)
  repeated IpcProviderSyncResult skipped = 3;
  // Providers with validation errors (never sent to server)
  repeated IpcProviderSyncResult validation_failed = 4;
  // Total operation time in milliseconds
  uint64 duration_ms = 5;
}

// Individual provider sync result
message IpcProviderSyncResult {
  // Provider ID (e.g., "openai")
  string provider = 1;
  // Error message (empty on success)
  string error = 2;
  // True if this error is retryable
  bool retryable = 3;
  // Error category for metrics (e.g., "timeout", "client_error")
  string error_category = 4;
  // HTTP status code if applicable
  optional uint32 status_code = 5;
}

// Request to check OAuth status for a provider
message IpcGetOAuthStatusRequest {
  string provider_id = 1;
}

// OAuth status response
message IpcOAuthStatusResponse {
  // The status
  OAuthStatusType status = 1;
  // Reason if status is UNKNOWN
  optional string reason = 2;
}

enum OAuthStatusType {
  OAUTH_STATUS_TYPE_UNKNOWN = 0;
  OAUTH_STATUS_TYPE_CONFIGURED = 1;      // OAuth is configured
  OAUTH_STATUS_TYPE_API_KEY = 2;         // API key auth configured
  OAUTH_STATUS_TYPE_WELL_KNOWN = 3;      // Well-known auth configured
  OAUTH_STATUS_TYPE_NOT_CONFIGURED = 4;  // No auth configured
}

// ============================================
// MESSAGE OPERATIONS
// ============================================

// Send a message to an AI session (non-streaming)
message IpcSendMessageRequest {
  string session_id = 1;        // Session to send to (required)
  string text = 2;              // Message text content (required)
  string model_id = 3;          // Model ID e.g., "claude-3-5-sonnet-20241022" (required)
  string provider_id = 4;       // Provider ID e.g., "anthropic" (required)
  optional string agent = 5;    // Agent name (default: "primary")
}

